crates/lattice-store-mongodb/tests/ui/skipped_document_id.stderr
error: Mongo identity field cannot be skipped by serde
 --> tests/ui/skipped_document_id.rs:8:13
  |
8 |     #[serde(skip)]
  |             ^^^^
